@@ -23,6 +23,7 @@
             <dd><ul>
                 <li><i>generation</i>, {% trans "to return areas in that generation (type and name lookups only)" %}.</li>
                 <li><i>min_generation</i>, {% trans "to return areas since that generation (type and name lookups only)" %}.</li>
+                <li><i>max_generation</i>, {% trans "to return results up to that generation, not active after (ditto)." %}.</li>
                 <li><i>type</i>, {% trans "to restrict results to a type or types (multiple separated by commas; name lookup only)" %}.</li>
                 <li><i>country</i>, {% trans "to restrict results to areas with particular country codes (multiple separated by commas; type and name lookups only)" %}.</li>
             </ul></dd>
