@@ -60,6 +60,11 @@
                         </li>
                         <li>
                             {% blocktrans trimmed %}
+                                <i>max_generation</i>, to return results up to that generation, not active after.
+                            {% endblocktrans %}
+                        </li>
+                        <li>
+                            {% blocktrans trimmed %}
                                 <i>country</i>, to restrict results to areas with particular country codes (multiple country codes separated by commas).
                             {% endblocktrans %}
                         </li>
