@@ -27,6 +27,10 @@
             {% blocktrans trimmed %}
                 <i>min_generation</i>, to return results since that generation.
             {% endblocktrans %}
+            </li><li>
+            {% blocktrans trimmed %}
+                <i>max_generation</i>, to return results up to that generation, not active after.
+            {% endblocktrans %}
         </li></ul></dd>
 
         {% include "mapit/api/postcode-example.html" %}
